--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -60,3 +60,7 @@
     }
   }
 }
+
+.content {
+  margin-bottom: 2rem;
+}
